Bug 374961 - Clipboard "Edit Contents" shortcut never works
Summary: Clipboard "Edit Contents" shortcut never works
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.8.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-12 14:37 UTC by William
Modified: 2017-01-14 00:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description William 2017-01-12 14:37:03 UTC
Been using every release of KDE since 2.x.
Since the new clipboard in the systray was introduced, assigning a shortcut to "Edit Contents.." and then trying to trigger it fails silently.

OTOH, assigning a shortcut to 'Open Klipper at mouse position' and using it works fine (funny how 'Klipper' is still mentioned, despite klipper being a separate program as far as I'm aware).
Comment 1 David Edmundson 2017-01-13 15:24:11 UTC
Git commit dd10d605c3d0aa2f59bcda3eb2312b474eac4a84 by David Edmundson.
Committed on 13/01/2017 at 15:24.
Pushed by davidedmundson into branch 'Plasma/5.9'.

Enable Edit Action in plasmoid mode

Summary:
EditAction is a keyboard activated shortcut that shows a dialog, there's
no reason for it to be available in standalone mode only, especially given the
option to enable the shortcut is available from the plasmoid.

Test Plan:
Set shortcut.
Pressed it.
Got a dialog with my clipboard contents

Standalone mode should be unchanged as it was showing it already.

Reviewers: #plasma, mart

Reviewed By: mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4114

M  +0    -1    klipper/klipper.cpp

https://commits.kde.org/plasma-workspace/dd10d605c3d0aa2f59bcda3eb2312b474eac4a84
Comment 2 William 2017-01-13 18:55:23 UTC
Wow, I literally waited YEARS hoping that every release would bring a fix, even removing the plasmoid en starting klipper.. then removing the plasmoid again with each apt-get upgrade.

Many, many thanks. If I can drop a donation anywhere, let me know.
Comment 3 David Edmundson 2017-01-14 00:14:07 UTC
Bugzilla can be hit and miss. Glad to help, thanks for reporting:

Donations here.
https://www.kde.org/community/donations/